Jenkins/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: agent
  selector:
    app: jenkins
  type: LoadBalancer # Change to NodePort or ClusterIP depending on your requirement
