Jenkins/service/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  hosts:
  - "*" # Replace with your desired hostname
  gateways:
  - default/default-gateway # Ensure you have a gateway configured
  http:
  - match:
    - uri:
        prefix: "/jenkins"
    route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 8080
